# factory-pattern

./: CMakeLists.txt  Operator.hpp  add.hpp  add_test.hpp  base.hpp  div.hpp  div_test.hpp  factory.hpp  main.cpp  mult.hpp  mult_test.hpp  op.hpp  op_test.hpp  pow.hpp  pow_test.hpp  rand.hpp  rand_test.hpp  sub.hpp  sub_test.hpp  test.cpp  unit_test.cpp
